--- a/beos/Makefile.target
+++ b/beos/Makefile.target
@@ -78,9 +78,9 @@
     NETSURF_FEATURE_BMP_CFLAGS := -DWITH_BMP
     NETSURF_FEATURE_GIF_CFLAGS := -DWITH_GIF
     NETSURF_FEATURE_PNG_CFLAGS := -DWITH_PNG
-    $(eval $(call pkg_config_find_and_add,BMP,libnsbmp,BMP))
-    $(eval $(call pkg_config_find_and_add,GIF,libnsgif,GIF))
-    $(eval $(call pkg_config_find_and_add,PNG,libpng,PNG  ))
+    $(eval $(call pkg_config_find_and_add_enabled,BMP,libnsbmp,BMP))
+    $(eval $(call pkg_config_find_and_add_enabled,GIF,libnsgif,GIF))
+    $(eval $(call pkg_config_find_and_add_enabled,PNG,libpng,PNG  ))
   endif
 
 # ----------------------------------------------------------------------------
