--- a/cocoa/Makefile.target
+++ b/cocoa/Makefile.target
@@ -53,10 +53,10 @@ endif
   NETSURF_FEATURE_PNG_CFLAGS := -DWITH_PNG
   NETSURF_FEATURE_NSSVG_CFLAGS := -DWITH_NS_SVG
 
-  $(eval $(call pkg_config_find_and_add,BMP,libnsbmp,BMP))
-  $(eval $(call pkg_config_find_and_add,GIF,libnsgif,GIF))
-  $(eval $(call pkg_config_find_and_add,PNG,libpng,PNG))
-  $(eval $(call pkg_config_find_and_add,NSSVG,libsvgtiny,SVG))
+  $(eval $(call pkg_config_find_and_add_enabled,BMP,libnsbmp,BMP))
+  $(eval $(call pkg_config_find_and_add_enabled,GIF,libnsgif,GIF))
+  $(eval $(call pkg_config_find_and_add_enabled,PNG,libpng,PNG))
+  $(eval $(call pkg_config_find_and_add_enabled,NSSVG,libsvgtiny,SVG))
   $(eval $(call feature_enabled,IMAGEIO,-DWITH_APPLE_IMAGE,,Apple ImageIO       ))
 
   ifneq ($(UNIVERSAL),)
