--- a/riscos/Makefile.target
+++ b/riscos/Makefile.target
@@ -30,11 +30,11 @@ else
   NETSURF_FEATURE_PNG_CFLAGS := -DWITH_PNG
   NETSURF_FEATURE_JS_CFLAGS := -DWITH_JS -DJS_HAS_FILE_OBJECT=0
   NETSURF_FEATURE_MOZJS_CFLAGS := -DWITH_MOZJS -DJS_HAS_FILE_OBJECT=0
-  $(eval $(call pkg_config_find_and_add,BMP,libnsbmp,BMP))
-  $(eval $(call pkg_config_find_and_add,GIF,libnsgif,GIF))
-  $(eval $(call pkg_config_find_and_add,PNG,libpng,PNG  ))
-  $(eval $(call pkg_config_find_and_add,MOZJS,mozjs185,JavaScript))
-  $(eval $(call pkg_config_find_and_add,JS,mozilla-js,JavaScript))
+  $(eval $(call pkg_config_find_and_add_enabled,BMP,libnsbmp,BMP))
+  $(eval $(call pkg_config_find_and_add_enabled,GIF,libnsgif,GIF))
+  $(eval $(call pkg_config_find_and_add_enabled,PNG,libpng,PNG  ))
+  $(eval $(call pkg_config_find_and_add_enabled,MOZJS,mozjs185,JavaScript))
+  $(eval $(call pkg_config_find_and_add_enabled,JS,mozilla-js,JavaScript))
 endif
 
 TPD_RISCOS = $(foreach TPL,$(notdir $(TPL_RISCOS)), \
