move common include path setup to core Makefile

--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -2,7 +2,7 @@
 # Amiga target setup
 # ----------------------------------------------------------------------------
 
-CFLAGS += -std=c99 -I . -Dnsamiga
+CFLAGS += -std=c99 -Dnsamiga
 
 ifneq ($(SUBTARGET),os3)
   CFLAGS += -U__STRICT_ANSI__ -D__USE_INLINE__ -D__USE_BASETYPE__
