--- a/beos/Makefile.target
+++ b/beos/Makefile.target
@@ -3,35 +3,34 @@
 # ----------------------------------------------------------------------------
 
 
-  $(eval $(call feature_enabled,PNG,-DWITH_PNG,-lpng,PNG (libpng)  ))
+$(eval $(call feature_enabled,PNG,-DWITH_PNG,-lpng,PNG (libpng)  ))
 
-  LDFLAGS += -L/boot/home/config/lib
-  # for Haiku
-  LDFLAGS += -L/boot/common/lib
-  # some people do *not* have libm...
-  LDFLAGS += -lssl -lcrypto -lcss
-  $(eval $(call feature_enabled,NSSVG,-DWITH_NS_SVG,-lsvgtiny,SVG (libsvgtiny)))
-  LDFLAGS += -ldom -lparserutils -lhubbub -lwapcaplet
-  LDFLAGS += -lexpat -lcurl -liconv
+LDFLAGS += -L/boot/home/config/lib
+# for Haiku
+LDFLAGS += -L/boot/common/lib
+# some people do *not* have libm...
+LDFLAGS += -lssl -lcrypto -lcss
+$(eval $(call feature_enabled,NSSVG,-DWITH_NS_SVG,-lsvgtiny,SVG (libsvgtiny)))
+LDFLAGS += -ldom -lparserutils -lhubbub -lwapcaplet
+LDFLAGS += -lexpat -lcurl -liconv
 
-  CFLAGS += -I. -O $(WARNFLAGS) -Dnsbeos		\
-		-D_BSD_SOURCE -D_POSIX_C_SOURCE		\
-		-Drestrict="" -Wno-multichar
-  # DEBUG
-  CFLAGS += -g -O0
-  # -DDEBUG=1
+CFLAGS += -O $(WARNFLAGS) -Dnsbeos -D_BSD_SOURCE -D_POSIX_C_SOURCE	\
+	    -Drestrict="" -Wno-multichar
+# DEBUG
+CFLAGS += -g -O0
+# -DDEBUG=1
 
-  BEOS_BERES := beres
-  BEOS_RC := rc
-  BEOS_XRES := xres
-  BEOS_SETVER := setversion
-  BEOS_MIMESET := mimeset
-  VERSION_FULL := $(shell sed -n '/"/{s/.*"\(.*\)".*/\1/;p;}' desktop/version.c)
-  VERSION_MAJ := $(shell sed -n '/_major/{s/.* = \([0-9]*\).*/\1/;p;}' desktop/version.c)
-  VERSION_MIN := $(shell sed -n '/_minor/{s/.* = \([0-9]*\).*/\1/;p;}' desktop/version.c)
-  RSRC_BEOS = $(addprefix $(OBJROOT)/,$(subst /,_,$(patsubst %.rdef,%.rsrc,$(RDEF_BEOS))))
-  RESOURCES = $(RSRC_BEOS)
-  ifeq ($(HOST),beos)
+BEOS_BERES := beres
+BEOS_RC := rc
+BEOS_XRES := xres
+BEOS_SETVER := setversion
+BEOS_MIMESET := mimeset
+VERSION_FULL := $(shell sed -n '/"/{s/.*"\(.*\)".*/\1/;p;}' desktop/version.c)
+VERSION_MAJ := $(shell sed -n '/_major/{s/.* = \([0-9]*\).*/\1/;p;}' desktop/version.c)
+VERSION_MIN := $(shell sed -n '/_minor/{s/.* = \([0-9]*\).*/\1/;p;}' desktop/version.c)
+RSRC_BEOS = $(addprefix $(OBJROOT)/,$(subst /,_,$(patsubst %.rdef,%.rsrc,$(RDEF_BEOS))))
+RESOURCES = $(RSRC_BEOS)
+ifeq ($(HOST),beos)
     CFLAGS += -I/boot/home/config/include		\
 		-I/boot/home/config/include/libmng	\
 		-I/boot/home/config/include/hubbub	\
@@ -66,22 +65,22 @@
     LDFLAGS += -lstdc++.r4
   else
     LDFLAGS += -lstdc++ -lsupc++
-  endif
+endif
 
-  ifeq ($(HOST),beos)
-    CFLAGS += -I$(PREFIX)/include
-    LDFLAGS += -L$(PREFIX)/lib
-    $(eval $(call feature_enabled,BMP,-DWITH_BMP,-lnsbmp,BMP (libnsbmp)))
-    $(eval $(call feature_enabled,GIF,-DWITH_GIF,-lnsgif,GIF (libnsgif)))
-    $(eval $(call feature_enabled,PNG,-DWITH_PNG,-lpng,PNG (libpng)  ))
-  else
-    NETSURF_FEATURE_BMP_CFLAGS := -DWITH_BMP
-    NETSURF_FEATURE_GIF_CFLAGS := -DWITH_GIF
-    NETSURF_FEATURE_PNG_CFLAGS := -DWITH_PNG
-    $(eval $(call pkg_config_find_and_add_enabled,BMP,libnsbmp,BMP))
-    $(eval $(call pkg_config_find_and_add_enabled,GIF,libnsgif,GIF))
-    $(eval $(call pkg_config_find_and_add_enabled,PNG,libpng,PNG  ))
-  endif
+ifeq ($(HOST),beos)
+  CFLAGS += -I$(PREFIX)/include
+  LDFLAGS += -L$(PREFIX)/lib
+  $(eval $(call feature_enabled,BMP,-DWITH_BMP,-lnsbmp,BMP (libnsbmp)))
+  $(eval $(call feature_enabled,GIF,-DWITH_GIF,-lnsgif,GIF (libnsgif)))
+  $(eval $(call feature_enabled,PNG,-DWITH_PNG,-lpng,PNG (libpng)  ))
+else
+  NETSURF_FEATURE_BMP_CFLAGS := -DWITH_BMP
+  NETSURF_FEATURE_GIF_CFLAGS := -DWITH_GIF
+  NETSURF_FEATURE_PNG_CFLAGS := -DWITH_PNG
+  $(eval $(call pkg_config_find_and_add_enabled,BMP,libnsbmp,BMP))
+  $(eval $(call pkg_config_find_and_add_enabled,GIF,libnsgif,GIF))
+  $(eval $(call pkg_config_find_and_add_enabled,PNG,libpng,PNG  ))
+endif
 
 # ----------------------------------------------------------------------------
 # Source file setup
@@ -89,9 +88,9 @@
 
 # S_BEOS are sources purely for the BeOS build
 S_BEOS := about.cpp bitmap.cpp download.cpp fetch_rsrc.cpp filetype.cpp \
-	font.cpp gui.cpp login.cpp gui_options.cpp plotters.cpp	scaffolding.cpp \
-	search.cpp schedule.cpp	thumbnail.cpp treeview.cpp throbber.cpp		\
-	window.cpp system_colour.cpp
+	font.cpp gui.cpp login.cpp gui_options.cpp plotters.cpp		\
+	scaffolding.cpp search.cpp schedule.cpp	thumbnail.cpp treeview.cpp \
+	throbber.cpp window.cpp system_colour.cpp
 S_BEOS := $(addprefix beos/,$(S_BEOS))
 
 RDEF_BEOS := res.rdef
