--- a/cocoa/Makefile.target
+++ b/cocoa/Makefile.target
@@ -10,11 +10,9 @@
   LDFLAGS += -lm -lcurl -liconv
   LDFLAGS += -lssl -lcrypto
 
-  CFLAGS += -I. -O $(WARNFLAGS) -Dnscocoa		\
+  CFLAGS += -O $(WARNFLAGS) -Dnscocoa		\
 		-D_BSD_SOURCE -D_POSIX_C_SOURCE		\
-		-std=c99
-
-  CFLAGS += -g -Os -Wno-uninitialized
+		-std=c99 -g -Os
 
   CFLAGS += $(shell $(PKG_CONFIG) --cflags libhubbub libcss libdom)
 
