- started to work on settings dialog - some WIP in treeview widgets. Changed destroy / and init handling.   It requires some optimization, when the widget is closed   it must remove itself from the guiwin list, for perfomance.

--- a/atari/Makefile.target
+++ b/atari/Makefile.target
@@ -106,10 +106,11 @@ S_ATARI := \
 	plot/eddi.s \
 	plot/font_freetype.c \
 	plot/font_internal.c \
-	gemtk/utils.c \
+	gemtk/aestabs.c \
 	gemtk/dragdrop.c \
+	gemtk/guiwin.c \
 	gemtk/msgbox.c \
-	gemtk/guiwin.c
+	gemtk/utils.c
 
 S_ATARI := $(addprefix atari/,$(S_ATARI))
 
