--- a/atari/Makefile.target
+++ b/atari/Makefile.target
@@ -40,6 +40,7 @@ $(eval $(call feature_enabled,PNG,-DWITH_PNG,-lpng,PNG (libpng)))
 $(eval $(call feature_enabled,MOZJS,$(SPIDERMONKEY_CFLAGS),-ljs,JavaScript (Spidermonkey)))
 $(eval $(call feature_enabled,ATARI_FREETYPE_FONT,$(FREETYPE_FONT_CFLAGS),-lfreetype,(Freetype)))
 $(eval $(call feature_enabled,ATARI_NETSURF_FONT,-DWITH_INTERNAL_FONT_DRIVER,,(Internal Font)))
+$(eval $(call feature_enabled,ATARI_VDI_FONT,-DWITH_VDI_FONT_DRIVER,,(Internal Font)))
 $(eval $(call feature_enabled,ATARI_8BPP_SUPPORT,-DWITH_8BPP_SUPPORT,,(Indexed screen format support)))
 
 # define additional CFLAGS and LDFLAGS requirements for pkg-configed libs here
@@ -104,6 +105,7 @@ S_ATARI := \
 	plot/eddi.s \
 	plot/font_freetype.c \
 	plot/font_internal.c \
+	plot/font_vdi.c \
 	gemtk/aestabs.c \
 	gemtk/dragdrop.c \
 	gemtk/guiwin.c \
