--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -61,6 +61,7 @@ else
   ifeq ($(SUBTARGET),os3)
     LDFLAGS += -lpbl -liconv
   else
+    CFLAGS += -DAMIGA_NETSURF_REPLACE_ALLOC
     LDFLAGS += -lauto -lpbl -liconv
   endif
 endif
@@ -80,7 +81,7 @@ S_AMIGA := gui.c tree.c history.c hotlist.c schedule.c file.c	\
 	sslcert.c gui_options.c print.c	theme.c	drag.c icon.c system_colour.c \
 	datatypes.c dt_picture.c dt_anim.c dt_sound.c plugin_hack.c	\
 	stringview/stringview.c stringview/urlhistory.c				\
-	agclass/amigaguide_class.c
+	agclass/amigaguide_class.c alloc.c
 S_AMIGA := $(addprefix amiga/,$(S_AMIGA))
 
 # This is the final source build list
