--- a/Makefile.sources
+++ b/Makefile.sources
@@ -13,9 +13,9 @@ S_CSS := css.c dump.c internal.c select.c utils.c
 
 S_RENDER := box.c box_construct.c box_normalise.c box_textarea.c	\
 	font.c form.c							\
-	html.c html_script.c html_interaction.c html_redraw.c		\
-	html_forms.c imagemap.c layout.c list.c search.c table.c	\
-	textplain.c
+	html.c html_css.c html_script.c html_interaction.c \
+	html_redraw.c html_forms.c imagemap.c layout.c list.c \
+	search.c table.c textplain.c
 
 S_UTILS := base64.c corestrings.c filename.c filepath.c hashtable.c	\
 	libdom.c locale.c log.c messages.c nsurl.c talloc.c url.c	\
