--- a/Makefile.sources
+++ b/Makefile.sources
@@ -14,8 +14,8 @@ S_CSS := css.c dump.c internal.c select.c utils.c
 S_RENDER := box.c box_construct.c box_normalise.c box_textarea.c	\
 	font.c form.c imagemap.c layout.c list.c search.c table.c 	\
 	textplain.c							\
-	html.c html_css.c html_script.c html_interaction.c 		\
-	html_redraw.c html_forms.c html_object.c
+	html.c html_css.c html_css_fetcher.c html_script.c		\
+	html_interaction.c html_redraw.c html_forms.c html_object.c
 
 S_UTILS := base64.c corestrings.c filename.c filepath.c hashtable.c	\
 	libdom.c locale.c log.c messages.c nsurl.c talloc.c url.c	\
