split sources lists out to their subdirectories as first step towards using core buildsystem

--- a/javascript/Makefile
+++ b/javascript/Makefile
@@ -61,3 +61,5 @@ $(eval $(foreach V,$(filter JSAPI_BINDING_%,$(.VARIABLES)),$(call convert_jsapi_
 else
 S_JAVASCRIPT += none.c
 endif
+
+S_JAVASCRIPT := $(addprefix javascript/,$(S_JAVASCRIPT)) $(S_JSAPI_BINDING)
