Fix up for various core changes.

--- a/test/Makefile
+++ b/test/Makefile
@@ -2,17 +2,17 @@ CFLAGS := -std=c99 -g -O0 -D_BSD_SOURCE -D_POSIX_C_SOURCE -I.. \
 		$(shell pkg-config --cflags libcurl)
 LDFLAGS := $(shell pkg-config --libs libcurl) -lz
 
-llcache_CFLAGS := $(shell pkg-config --cflags libparserutils libwapcaplet)
-llcache_LDFLAGS := $(shell pkg-config --libs libparserutils libwapcaplet)
+llcache_CFLAGS := $(shell pkg-config --cflags libparserutils libwapcaplet libdom) -O2
+llcache_LDFLAGS := $(shell pkg-config --libs libparserutils libwapcaplet libdom)
 
 llcache_SRCS := content/fetch.c content/fetchers/curl.c \
 		content/fetchers/about.c content/fetchers/data.c \
 		content/fetchers/resource.c content/llcache.c \
 		content/urldb.c desktop/options.c desktop/version.c \
 		image/image_cache.c \
-		utils/base64.c utils/hashtable.c utils/log.c utils/nsurl.c \
-		utils/messages.c utils/url.c utils/useragent.c utils/utf8.c \
-		utils/utils.c test/llcache.c
+		utils/base64.c utils/corestrings.c utils/hashtable.c \
+		utils/log.c utils/nsurl.c utils/messages.c utils/url.c \
+		utils/useragent.c utils/utils.c test/llcache.c
 
 urldbtest_SRCS := content/urldb.c utils/url.c utils/utils.c utils/log.c \
 		desktop/options.c utils/messages.c utils/hashtable.c \
