--- a/gtk/Makefile.target
+++ b/gtk/Makefile.target
@@ -136,7 +136,7 @@ GTK_RESOURCES_LIST := $(addprefix gtk/res/, $(GTK_RESOURCES_LIST)) \
 			$(wildcard gtk/res/*.gtk*.ui)
 
 # translations with more than just Messages files
-GTK_TRANSLATIONS_HTML := de en it ja
+GTK_TRANSLATIONS_HTML := de en fr it ja nl
 
 install-gtk:
 	$(Q)mkdir -p $(DESTDIR)$(NETSURF_GTK_RESOURCES)throbber
@@ -147,7 +147,7 @@ install-gtk:
 	$(Q)install -m 0644 gtk/res/icons/*.png $(DESTDIR)$(NETSURF_GTK_RESOURCES)/icons
 	$(Q)install -m 0644 gtk/res/throbber/*.png $(DESTDIR)$(NETSURF_GTK_RESOURCES)/throbber
 	$(Q)tar -c -h -C gtk/res -f - themes | tar -xv -C $(DESTDIR)$(NETSURF_GTK_RESOURCES) -f -
-	$(Q)tar -c -h -C gtk/res -f - $(GTK_TRANSLATIONS_HTML) | tar -xv -C $(DESTDIR)$(NETSURF_GTK_RESOURCES) -f -
+	$(Q)tar -c -h -C gtk/res -f - C $(GTK_TRANSLATIONS_HTML) | tar -xv -C $(DESTDIR)$(NETSURF_GTK_RESOURCES) -f -
 	$(call split_install_messages, gtk, $(DESTDIR)$(NETSURF_GTK_RESOURCES))
 
 # ----------------------------------------------------------------------------
