--- a/Makefile.defaults
+++ b/Makefile.defaults
@@ -63,9 +63,9 @@ NETSURF_USE_VIDEO := NO
 
 # Enable NetSurf's use of spidermonkey for javascript
 # Valid options: YES, NO, AUTO
-NETSURF_USE_JS := NO
+NETSURF_USE_JS := AUTO
 # Javascript support in older debian/ubuntu versions
-NETSURF_USE_MOZJS := NO
+NETSURF_USE_MOZJS := AUTO
 
 # Enable NetSurf's use of libharu for PDF export and GTK printing support.
 # There is no auto-detection available for this, as it does not have a
