stop the build whinging about NETSURF_USE_JS := AUTO

--- a/amiga/Makefile.defaults
+++ b/amiga/Makefile.defaults
@@ -36,5 +36,11 @@
   # Valid options: YES, NO, AUTO
   NETSURF_USE_AMIGA_CAIRO := AUTO
 
+  # Enable NetSurf's use of Spidermonkey 1.80+
+  # Only here to stop the build complaining;
+  # enable NETSURF_USE_MOZJS instead for JavaScript support
+  # Valid options: NO 
+  NETSURF_USE_JS := NO
+  
   # Optimisation levels
   CFLAGS += -O2 -gstabs
