--- a/gtk/Makefile.target
+++ b/gtk/Makefile.target
@@ -111,7 +111,7 @@ S_GTK := font_pango.c bitmap.c gui.c schedule.c thumbnail.c plotters.c	\
 	treeview.c scaffolding.c gdk.c completion.c login.c throbber.c	\
 	selection.c history.c window.c filetype.c download.c menu.c	\
 	print.c search.c tabs.c theme.c toolbar.c gettext.c		\
-	compat.c cookies.c hotlist.c system_colour.c			\
+	compat.c cookies.c hotlist.c 					\
 	$(addprefix dialogs/,preferences.c about.c source.c)
 
 S_GTK := $(addprefix gtk/,$(S_GTK)) $(addprefix utils/,container.c)
