Build the new treeview and global history.

--- a/desktop/Makefile
+++ b/desktop/Makefile
@@ -3,7 +3,7 @@
 S_DESKTOP := cookies.c history_global_core.c hotlist.c knockout.c	\
 	mouse.c plot_style.c print.c search.c searchweb.c	\
 	scrollbar.c sslcert.c textarea.c thumbnail.c tree.c 		\
-	tree_url_node.c version.c system_colour.c
+	tree_url_node.c version.c system_colour.c global_history.c treeview.c
 
 S_DESKTOP := $(addprefix desktop/,$(S_DESKTOP))
 
