enable trace logging in binding generation

--- a/javascript/Makefile
+++ b/javascript/Makefile
@@ -35,7 +35,7 @@ D_JSAPI_BINDING += $(patsubst %.c,%.d,$(2))
 
 $(2): $(1) $(OBJROOT)/created
 	$$(VQ)echo " GENBIND: $(1)"
-	$(Q)nsgenbind -I javascript/WebIDL -d $(patsubst %.c,%.d,$(2)) -h $(3) -o $(2) $(1)
+	$(Q)nsgenbind -g -I javascript/WebIDL -d $(patsubst %.c,%.d,$(2)) -h $(3) -o $(2) $(1)
 
 $(3): $(2)
 
