--- a/desktop/Makefile
+++ b/desktop/Makefile
@@ -1,6 +1,6 @@
 # Sources for desktop
 
-S_DESKTOP := cookies_old.c history_global_core.c hotlist.c knockout.c	\
+S_DESKTOP := cookie_manager.c cookies_old.c history_global_core.c hotlist.c knockout.c	\
 	mouse.c plot_style.c print.c search.c searchweb.c	\
 	scrollbar.c sslcert.c textarea.c thumbnail.c tree.c 		\
 	tree_url_node.c version.c system_colour.c global_history.c treeview.c
