Add missing icons to package

--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -103,7 +103,7 @@ package-amiga: netsurf.lha
 AMIGA_LANGUAGES_MESSAGES := de en it
 AMIGA_LANGUAGES := $(AMIGA_LANGUAGES_MESSAGES) ja
 AMIGA_PLATFORM_RESOURCES := Pointers Themes default.css default.css.info favicon.png LangNames mimetypes Resource.map SearchEngines splash.png
-AMIGA_GENERIC_RESOURCES := $(AMIGA_LANGUAGES) ca-bundle
+AMIGA_GENERIC_RESOURCES := $(AMIGA_LANGUAGES) ca-bundle Icons
 AMIGA_RESOURCES := $(addprefix amiga/resources/,$(AMIGA_PLATFORM_RESOURCES)) $(addprefix \!NetSurf/Resources/,$(AMIGA_GENERIC_RESOURCES))
 AMIGA_LIBRARIES := parserutils.library nsgif.library nsbmp.library iconv.library hubbub.library
 AMIGA_LIBS := $(addprefix /Libs/,$(AMIGA_LIBRARIES))
