Remove tree icon_name globals from all the front ends.

--- a/beos/Makefile.target
+++ b/beos/Makefile.target
@@ -89,7 +89,7 @@ endif
 # S_BEOS are sources purely for the BeOS build
 S_BEOS := about.cpp bitmap.cpp download.cpp fetch_rsrc.cpp filetype.cpp \
 	font.cpp gui.cpp login.cpp gui_options.cpp plotters.cpp		\
-	scaffolding.cpp search.cpp schedule.cpp	thumbnail.cpp treeview.cpp \
+	scaffolding.cpp search.cpp schedule.cpp	thumbnail.cpp		\
 	throbber.cpp window.cpp
 S_BEOS := $(addprefix beos/,$(S_BEOS))
 
