Remove old hotlist, cookies, and history_global_core modules.
New versions of expand/collapse node functions for these modules aren't yet implemented.

--- a/desktop/Makefile
+++ b/desktop/Makefile
@@ -1,9 +1,9 @@
 # Sources for desktop
 
-S_DESKTOP := cookie_manager.c cookies_old.c history_global_core.c hotlist_old.c knockout.c	\
-	hotlist.c mouse.c plot_style.c print.c search.c searchweb.c	\
-	scrollbar.c sslcert_viewer.c textarea.c thumbnail.c tree.c 		\
-	version.c system_colour.c global_history.c treeview.c
+S_DESKTOP := cookie_manager.c knockout.c hotlist.c mouse.c		\
+	plot_style.c print.c search.c searchweb.c scrollbar.c		\
+	sslcert_viewer.c textarea.c thumbnail.c tree.c version.c	\
+	system_colour.c global_history.c treeview.c
 
 S_DESKTOP := $(addprefix desktop/,$(S_DESKTOP))
 
