--- a/riscos/Makefile.target
+++ b/riscos/Makefile.target
@@ -71,9 +71,9 @@ endif
 S_RISCOS := 401login.c assert.c bitmap.c buffer.c cookies.c configure.c	\
 	dialog.c download.c filetype.c font.c				\
 	global_history.c gui.c help.c history.c hotlist.c iconbar.c	\
-	image.c menus.c message.c palettes.c plotters.c			\
+	image.c menus.c message.c mouse.c palettes.c plotters.c		\
 	print.c query.c save.c save_draw.c save_pdf.c schedule.c	\
-	search.c searchweb.c sslcert.c textarea.c	\
+	search.c searchweb.c sslcert.c textarea.c			\
 	textselection.c theme.c theme_install.c thumbnail.c toolbar.c	\
 	treeview.c ucstables.c uri.c url_complete.c url_protocol.c	\
 	url_suggest.c wimp.c wimp_event.c window.c			\
