--- a/atari/Makefile.target
+++ b/atari/Makefile.target
@@ -128,8 +128,8 @@ ATARI_TARGET_DIR := netsurf/
 ATARI_RES_DIR := atari/res/
 ATARI_DOC_DIR := atari/doc/
 ATARI_FONT_NAME := ttf-bitstream-vera-1.10
-ATARI_FONT_SOURCE_URL := http://ftp.gnome.org/pub/GNOME/sources/ttf-bitstream-vera/1.10/$(ATARI_FONT_NAME).tar.gz
-#ATARI_FONT_SOURCE_URL := http://localhost/$(ATARI_FONT_NAME).tar.gz
+#ATARI_FONT_SOURCE_URL := http://ftp.gnome.org/pub/GNOME/sources/ttf-bitstream-vera/1.10/$(ATARI_FONT_NAME).tar.gz
+ATARI_FONT_SOURCE_URL := http://localhost/$(ATARI_FONT_NAME).tar.gz
 ATARI_FONT_TMP_DIR := $(DEPROOT)/../
 ATARI_FONT_SOURCE_DIR := $(ATARI_FONT_TMP_DIR)$(ATARI_FONT_NAME)/
 ATARI_GENERIC_RESOURCES := de en it ja
@@ -153,10 +153,10 @@ package-atari: $(ATARI_FONT_TMP_DIR)$(ATARI_FONT_NAME) $(PKGNAME)
 	$(VQ)echo Creating $(PKGNAME)
 
 $(PKGNAME): $(EXETARGET)
-ifneq ($(strip $(STRIP)),)
-	$(Q)echo Stripping symbols from $(EXETARGET) with $(STRIP)
-	$(Q)$(STRIP) $(EXETARGET)
-endif
+#ifneq ($(strip $(STRIP)),)
+#	$(Q)echo Stripping symbols from $(EXETARGET) with $(STRIP)
+#	$(Q)$(STRIP) $(EXETARGET)
+#endif
 ifneq ($(strip $(STACK)),)
 	$(Q)$(STACK) -S 256k $(EXETARGET)
 endif
