--- a/atari/Makefile.target
+++ b/atari/Makefile.target
@@ -40,7 +40,7 @@ $(eval $(call feature_enabled,PNG,-DWITH_PNG,-lpng,PNG (libpng)))
 $(eval $(call feature_enabled,MOZJS,$(SPIDERMONKEY_CFLAGS),-ljs,JavaScript (Spidermonkey)))
 $(eval $(call feature_enabled,ATARI_FREETYPE_FONT,$(FREETYPE_FONT_CFLAGS),-lfreetype,(Freetype)))
 $(eval $(call feature_enabled,ATARI_NETSURF_FONT,-DWITH_INTERNAL_FONT_DRIVER,,(Internal Font)))
-$(eval $(call feature_enabled,ATARI_VDI_FONT,-DWITH_VDI_FONT_DRIVER,,(Internal Font)))
+$(eval $(call feature_enabled,ATARI_VDI_FONT,-DWITH_VDI_FONT_DRIVER,,(VDI Font)))
 $(eval $(call feature_enabled,ATARI_8BPP_SUPPORT,-DWITH_8BPP_SUPPORT,,(Indexed screen format support)))
 
 # define additional CFLAGS and LDFLAGS requirements for pkg-configed libs here
@@ -77,28 +77,26 @@ LDFLAGS += -L$(GCCSDK_INSTALL_ENV)/lib
 S_ATARI := \
 	bitmap.c \
 	clipboard.c \
+	ctxmenu.c \
+	deskmenu.c \
+	download.c \
+	encoding.c \
 	findfile.c \
 	filetype.c \
 	font.c \
 	gui.c \
-	misc.c \
-	schedule.c \
-	download.c \
-	thumbnail.c \
 	login.c \
-	treeview.c \
-	hotlist.c \
-	history.c\
+	misc.c \
+	osspec.c \
+	schedule.c \
 	search.c \
+	statusbar.c \
+	thumbnail.c \
+	treeview.c \
 	redrawslots.c \
-	encoding.c \
 	rootwin.c \
 	toolbar.c \
-	statusbar.c \
-	osspec.c \
-	ctxmenu.c \
 	settings.c \
-	deskmenu.c \
 	plot/plot.c \
 	plot/fontplot.c \
 	plot/eddi.s \
@@ -111,6 +109,10 @@ S_ATARI := \
 	gemtk/msgbox.c \
 	gemtk/utils.c \
 	gemtk/objc.c
+
+#	cookies.c \
+#	hotlist.c \
+#	history.c\
 
 S_ATARI := $(addprefix atari/,$(S_ATARI))
 
