--- a/riscos/Makefile.target
+++ b/riscos/Makefile.target
@@ -83,7 +83,7 @@ S_RISCOS := 401login.c assert.c bitmap.c buffer.c cookies.c configure.c	\
 	throbber.c url_bar.c)						\
 	$(addprefix configure/,con_cache.c con_connect.c con_content.c	\
 	con_fonts.c con_home.c con_image.c con_inter.c con_language.c	\
-	con_memory.c con_secure.c con_theme.c)
+	con_secure.c con_theme.c)
 S_RISCOS := $(addprefix riscos/,$(S_RISCOS))
 TPL_RISCOS := de en fr nl # TODO: It'd be nice to auto-detect these
 TPL_RISCOS := $(addprefix riscos/templates/,$(TPL_RISCOS))
