Use correct LD_LIBRARY_PATH for additional libraries

--- a/atari/Makefile.target
+++ b/atari/Makefile.target
@@ -70,7 +70,7 @@ LDFLAGS += -lcflib -lcurl
 LDFLAGS += -lcss -lparserutils -ldom -lwapcaplet -lhubbub
 LDFLAGS += -lssl -lcrypto
 LDFLAGS += -lz -liconv -lcares -lHermes -lgem -lm
-LDFLAGS += -L$(GCCSDK_INSTALL_ENV)/lib
+LDFLAGS += -L$(GCCSDK_INSTALL_ENV)/env/lib
 
 
 # S_ATARI are sources purely for the Atari FreeMiNT build
