--- a/beos/Makefile.target
+++ b/beos/Makefile.target
@@ -99,9 +99,11 @@ RDEF_IMP_BEOS := $(addprefix $(OBJROOT)/,$(subst /,_,$(RDEF_IMP_BEOS)))
 
 RDEP_BEOS := \
 	adblock.css beosdefault.css default.css internal.css quirks.css	\
-	netsurf.png ca-bundle.txt
+	netsurf.png favicon.png ca-bundle.txt \
+	credits.html licence.html welcome.html
 RDEP_BEOS := $(addprefix beos/res/,$(RDEP_BEOS))			\
-	$(wildcard beos/res/icons/*.png)				\
+	$(wildcard beos/res/icons/*.png)						\
+	$(wildcard beos/res/??/*)								\
 	$(wildcard beos/res/throbber/throbber*.png)
 
 
