--- a/Makefile.defaults
+++ b/Makefile.defaults
@@ -43,15 +43,9 @@ NETSURF_USE_GIF := YES
 # Valid options: YES, NO				  (highly recommended)
 NETSURF_USE_JPEG := YES
 
-# Enable NetSurf's use of libpng for displaying PNGs.  If MNG and PNG
-# are both enabled then NetSurf will choose libpng for PNGs, leaving
-# MNGs and JNGs to libmng.
-# Valid options: YES, NO	  (at least one of PNG/MNG highly recommended)
+# Enable NetSurf's use of libpng for displaying PNGs.
+# Valid options: YES, NO	                          (highly recommended)
 NETSURF_USE_PNG := YES
-
-# Enable NetSurf's use of libmng for displaying MNGs, JNGs and PNGs
-# Valid options: YES, NO	  (at least one of PNG/MNG highly recommended)
-NETSURF_USE_MNG := YES
 
 # Enable NetSurf's use of libwebp for displaying WebPs
 # Valid options: YES, NO
