--- a/riscos/Makefile.target
+++ b/riscos/Makefile.target
@@ -45,6 +45,7 @@ RESOURCES = $(TPD_RISCOS) split-messages
 CFLAGS += $(WARNFLAGS) -Driscos	-std=c99 -D_BSD_SOURCE -D_POSIX_C_SOURCE \
 	    -mpoke-function-name -fno-strict-aliasing
 
+CFLAGS += -I$(GCCSDK_INSTALL_ENV)/include
 ifeq ($(HOST),riscos)
   CFLAGS += -I<OSLib$$Dir> -mthrowback
 endif
