Initial conversion of netsurf gui to callback vtable

--- a/desktop/Makefile
+++ b/desktop/Makefile
@@ -13,7 +13,7 @@ desktop/version.c: testament utils/testament.h
 # S_BROWSER are sources related to full browsers but are common
 # between RISC OS, GTK, BeOS and AmigaOS builds
 S_BROWSER := browser.c download.c frames.c local_history.c netsurf.c \
-	save_complete.c save_text.c selection.c textinput.c
+	save_complete.c save_text.c selection.c textinput.c gui_factory.c
 
 S_BROWSER := $(addprefix desktop/,$(S_BROWSER))
 
